--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,13 @@
 apply plugin: 'com.android.application'
 
+def versionMajor = 1
+def versionMinor = 0
+def versionPatch = 0
+
 android {
     compileSdkVersion 32
     defaultConfig {
-        applicationId 'com.full.torrent.no.ads.private1.encrypted'
+        applicationId 'com.full.torrent.no.ads.encrypted'
         minSdkVersion 24
         targetSdkVersion 32
         versionCode 25
@@ -11,7 +15,14 @@ android {
          * Convection:
          *  major.minor.[revision][-some_info]
          */
-        versionName '3.4'
+        versionCode versionMajor*10000+versionMinor*100+versionPatch
+        versionName "${versionMajor}.${versionMinor}.${versionPatch}"
+        resValue "string","app_version", "${defaultConfig.versionName}"
+        applicationVariants.all { variant ->
+            variant.outputs.each { output ->
+                output.outputFileName = "FullTorrent-v${android.defaultConfig.versionName}-${variant.buildType.name}.apk"
+            }
+        }
         vectorDrawables.useSupportLibrary true
         multiDexEnabled true
 
@@ -51,7 +62,6 @@ android {
         }
 
         debug {
-
             versionNameSuffix '-DEBUG'
             testCoverageEnabled true
             debuggable true
@@ -69,12 +79,12 @@ android {
     }
 
     project.ext.versionCodes = ['armeabi-v7a': 1, 'arm64-v8a': 2, 'x86': 3, 'x86_64': 4]
-    applicationVariants.all { variant ->
-        outputs.all { output ->
-            versionCodeOverride =
-                    project.ext.versionCodes.get(output.getFilter(com.android.build.OutputFile.ABI), 0) * 1000000 + versionCode
-        }
-    }
+//    applicationVariants.all { variant ->
+//        outputs.all { output ->
+//            versionCodeOverride =
+//                    project.ext.versionCodes.get(output.getFilter(com.android.build.OutputFile.ABI), 0) * 1000000 + versionCode
+//        }
+//    }
 
     compileOptions {
         encoding 'UTF-8'
@@ -124,7 +134,7 @@ dependencies {
     androidTestImplementation "androidx.room:room-testing:$ROOM_VERSION"
     //testAnnotationProcessor 'com.google.auto.service:auto-service:1.0-rc7'
     compileOnly group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
-    implementation "com.fulldive:popups:1.0.5"
+    implementation "com.fulldive:popups:1.0.13"
     /* AndroidX libraries */
     //implementation 'com.android.billingclient:billing:3.0.1'
     implementation 'androidx.appcompat:appcompat:1.4.1'
