--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 android.enableJetifier=true
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx1536m
+org.gradle.jvmargs=-Xmx1536M
 org.gradle.parallel=false
 org.gradle.caching=false
 org.gradle.configureondemand=false
