--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,5 @@
 android.enableJetifier=true
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx1536M
-org.gradle.parallel=false
-org.gradle.caching=false
-org.gradle.configureondemand=false
+
+org.gradle.jvmargs=-Xmx4608M -XX:+UseParallelGC
+org.gradle.parallel=true
