--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ android {
         def SESSION_LOGGING = 'SESSION_LOGGING'
         release {
             signingConfig signingConfigs.release
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField('boolean', SESSION_LOGGING, 'false')
         }
